--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-persist": "^6.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.72.1",
     "yup": "^0.32.11"
   },
   "scripts": {
